<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateHabitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnDeleteHabit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_delete"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Delete habit"
            android:scaleType="fitCenter"/>

        <!-- Заголовок -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Новая привычка"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Название -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Название">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHabitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Описание -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Описание"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHabitDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Тип привычки -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHabitType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Тип"
            android:layout_marginTop="8dp">

            <!-- RadioGroup для типа привычки -->
            <RadioGroup
                android:id="@+id/rgHabitType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="16dp">

                <RadioButton
                    android:id="@+id/rbHabitGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Полезная" />

                <RadioButton
                    android:id="@+id/rbHabitBad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Вредная" />

            </RadioGroup>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Частота выполнения привычки -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Частота"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHabitFrequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="Количество"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="раз(а) в"
                    android:gravity="center"
                    android:layout_marginStart="8dp"/>

                <Spinner
                    android:id="@+id/spinnerFrequencyUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:entries="@array/periodicity_options"/>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Приоритет -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Приоритет"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/priority_levels"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Интеграция ColorPicker -->
        <com.example.dailybloom.view.color.ColorPicker
            android:id="@+id/colorPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/btnSaveHabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Сохранить" />

    </LinearLayout>
</ScrollView>